<resources>
    <string name="app_name">AppliVoiture</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="chiffre_d_affaires">chiffre d\'affaires</string>
    <string name="voiture_loue">voitures louees</string>
    <string name="voiture_non_loue">voitures non louees</string>
    <string name="ajouter_une_voiture">Ajouter une voiture</string>
    <string name="recherche">Recherche</string>
    <string name="param_tres">Paramétres</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ville">Ville :</string>
    <string name="campagne">Campagne :</string>
    <string name="prix_jour_en">Prix/jour en € :</string>
    <string name="etat">Etat :</string>
    <string name="photo">Photo</string>
    <string name="gallery">Gallery</string>
    <string name="defaut">defaut</string>
    <string name="ajouter_un_client">Ajouter un client</string>
    <string name="mail">\@mail :</string>
    <string name="mot_de_passe">Mot de passe :</string>
    <string name="r_p_ter_le_mot_de_passe">Répéter le mot de passe :</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="prenom">Prenom :</string>
    <string name="nom">Nom :</string>
    <string name="inscription">Inscription</string>
    <string name="mail_du_client">\@mail du client :</string>
    <string name="date_d_but">Date début location :</string>
    <string name="date_fin_location">Date fin location :</string>
    <string name="adresse">Adresse :</string>
    <string name="valider">Valider</string>
    <string name="marque">Marque :</string>
    <string name="immatriculation">Immatriculation :</string>
    <string name="mod_le">Modéle :</string>
    <string name="modele_marque">modele + marque</string>
    <string name="prix_par_jour_la_location">Prix par jour à la location :</string>
    <string name="prix_j">prix/j</string>
    <string name="route_adapt_e_pour_la_voiture">Route adaptée pour la voiture :</string>
    <string name="campagne_ville">campagne/ville</string>
    <string name="detail_location">Detail location</string>
    <string name="ville2">Ville</string>
    <string name="campagne2">Campagne</string>
    <string name="AppliCar">AppliCar</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
</resources>
