<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    tools:context="fr.eni.ecole.android.applivoiture.Activity.DetailsVoitureActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageVoiture"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/renault_megane"/>

    <TextView
        android:id="@+id/modele_marque"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modele_marque" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prix_par_jour_la_location" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/prix"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prix_j" />

    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/immatriculation" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/immatriculation"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/immatriculation" />

    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/route_adapt_e_pour_la_voiture" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/terrain"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campagne_ville" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_location"
        android:visibility="visible"
        android:onClick="openLocation"/>

</LinearLayout>
